[package]
name = "winhooker"
version = "0.1.1"
edition = "2021"
authors = ["Roee Shoshani"]
description = "a helper for hooking functions in windows on x64"
repository = "https://github.com/roeeshoshani/winhooker"
license = "MIT"
keywords = ["hook", "x86", "windows"]
categories = []

[dependencies]
hooker = { version = "0.1.5", features = ["std"] }
thiserror = "1.0.58"
windows = { version = "0.54.0", features = ["Win32_System_Diagnostics_Debug", "Win32_System_LibraryLoader", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_System_Memory", "Wdk_System_SystemServices"] }
