[package]
name = "winhooker"
version = "0.1.13"
edition = "2021"
authors = ["Roee Shoshani"]
description = "a helper for hooking functions in windows on x64"
repository = "https://github.com/roeeshoshani/winhooker"
license = "MIT"
keywords = ["hook", "x86", "windows"]
categories = []

[dependencies]
arrayvec = "0.7.4"
hooker = "0.1.9"
thiserror-no-std = "2.0.2"
windows-sys = { version = "0.52.0", features = ["Win32_Foundation", "Win32_System_SystemServices", "Win32_System_LibraryLoader", "Win32_System_ProcessStatus", "Win32_System_Threading", "Win32_System_Memory_NonVolatile", "Win32_System_Diagnostics_Debug"] }

[features]
std = ["hooker/std", "thiserror-no-std/std"]
